--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eventsource-parser": "^1.1.2",
     "install": "^0.13.0",
     "next": "^13.3.0",
+    "next-pwa": "^5.6.0",
     "npm": "^9.6.4",
     "postcss": "8.4.22",
     "react": "18.2.0",
